--- a/styles.css
+++ b/styles.css
@@ -2,23 +2,31 @@
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
     box-sizing: border-box;
-    --bg-color: #2d2d2d;
+    --body-bg-color: #5a5a5a;
+    --card-bg-color: rgb(199, 199, 199);
 }
 
 h1,h2,h3,h4,h5,h6 {
     font-size: 1rem;
 }
 
+button:hover {
+    cursor: pointer;
+}
+
 body {
     appearance: none;
-    background-color: var(--bg-color);
+    background-color: var(--body-bg-color);
+    color:white;
 
     /* reset below - placeholder values */
 
-    height: 90vh;
-    display: flex;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 1fr 5fr 1fr;
     align-items: center;
     justify-content: center;
+    gap: 2rem;
 }
 
 * {
@@ -44,13 +52,14 @@ main.container {
 .book-card {
     width: 300px;
     height: 300px;
-    background-color: rgb(199, 199, 199);
+    background-color: var(--card-bg-color);
     border-radius: 10px;
     padding: 1rem 1.5rem;
     box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.719);
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    color: black;
 }
 
 .book-info {
@@ -70,4 +79,44 @@ main.container {
 
 .book-property {
     font-weight: 300;
+}
+
+header {
+    padding: 1rem;
+    border-radius: 20px;
+    background-color: var(--card-bg-color);
+}
+
+header h1 {
+    font-size: 1.7rem;
+    color:black;
+}
+
+.add-book {
+    padding: 0.5rem 1rem;
+    border-radius: 10px;
+    border: 1px solid black;
+}
+
+#book-form {
+    position:absolute;
+    visibility: visible;
+    padding: 0.5rem 1rem;
+    display:grid;
+    background-color: var(--card-bg-color);
+    box-shadow: 1px 1px 5px black;
+    border-radius: 20px;
+    color:black;
+}
+
+input {
+    margin-bottom: 15px;
+    outline: none;
+    border: 1px solid black;
+    border-radius: 10px;
+    padding: 0 5px;
+}
+
+label {
+    margin-bottom: 5px;
 }
