--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,13 @@ main.container {
 
 .book-read {
     text-align: center;
+    border-radius: 20px;
+    border: 2px solid black;
+    background-color: rgb(29, 190, 29);
+}
+
+.book-read.not-read {
+    background-color: rgb(192, 36, 36);
 }
 
 .book-name {
