--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,10 @@
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 16px;
     box-sizing: border-box;
-    --body-bg-color: #5a5a5a;
-    --card-bg-color: rgb(199, 199, 199);
+    --body-bg-color: #0d0e0f;
+    --card-bg-color: rgb(73, 164, 170);
+    --book-read: rgb(29, 220, 29);
+    --book-not-read: rgb(220, 36, 36);
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -18,14 +20,9 @@ body {
     appearance: none;
     background-color: var(--body-bg-color);
     color:white;
-
-    /* reset below - placeholder values */
-
     height: 100vh;
     display: grid;
-    grid-template-rows: 1fr 5fr 1fr;
-    align-items: center;
-    justify-items: center;
+    grid-template: 1fr 5fr 1fr / 1fr;
     gap: 2rem;
 }
 
@@ -47,6 +44,7 @@ main.container {
     justify-content: center;
     align-items: center;
     gap: 20px;
+    flex-wrap: wrap;
 }
 
 .book-card {
@@ -73,11 +71,21 @@ main.container {
     text-align: center;
     border-radius: 20px;
     border: 2px solid black;
-    background-color: rgb(29, 190, 29);
+    background-color: var(--book-read);
+}
+
+.book-read:hover {
+    background-color: rgb(29, 180, 29);
+    transition: all 0.2s;
 }
 
 .book-read.not-read {
-    background-color: rgb(192, 36, 36);
+    background-color: var(--book-not-read);
+}
+
+.book-read.not-read:hover {
+    background-color: rgb(180, 36, 36);
+    transition: all 0.2s;
 }
 
 .book-name {
@@ -91,8 +99,8 @@ main.container {
 
 header {
     padding: 1rem;
-    border-radius: 20px;
     background-color: var(--card-bg-color);
+    box-shadow: 0px 1px 10px black;
 }
 
 header h1 {
