--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,10 @@
     font-size: 16px;
     box-sizing: border-box;
     --body-bg-color: #0d0e0f;
-    --card-bg-color: rgb(73, 164, 170);
+    --card-bg-color: rgb(176, 218, 221);
     --book-read: rgb(29, 220, 29);
     --book-not-read: rgb(220, 36, 36);
+    color: var(--body-bg-color);
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -19,11 +20,10 @@ button:hover {
 body {
     appearance: none;
     background-color: var(--body-bg-color);
-    color:white;
-    height: 100vh;
     display: grid;
     grid-template: 1fr 5fr 1fr / 1fr;
     gap: 2rem;
+    position: relative;
 }
 
 * {
@@ -40,16 +40,15 @@ ul {
 }
 
 main.container {
-    display:flex;
-    justify-content: center;
-    align-items: center;
+    position: relative;
+    display:grid;
+    grid-template-columns: repeat(auto-fit, minmax(225px, 1fr));
+    grid-auto-rows: 300px;
     gap: 20px;
-    flex-wrap: wrap;
+    padding: 1rem 2rem;
 }
 
 .book-card {
-    width: 300px;
-    height: 300px;
     background-color: var(--card-bg-color);
     border-radius: 10px;
     padding: 1rem 1.5rem;
@@ -57,7 +56,6 @@ main.container {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    color: black;
     position: relative;
 }
 
@@ -69,9 +67,14 @@ main.container {
 
 .book-read {
     text-align: center;
-    border-radius: 20px;
+    border-radius: 15px;
     border: 2px solid black;
     background-color: var(--book-read);
+    width: 100px;
+    height: 50px;
+    font-size: 1rem;
+    font-weight: 600;
+    align-self: center;
 }
 
 .book-read:hover {
@@ -101,28 +104,46 @@ header {
     padding: 1rem;
     background-color: var(--card-bg-color);
     box-shadow: 0px 1px 10px black;
+    text-align: center;
 }
 
 header h1 {
     font-size: 1.7rem;
-    color:black;
 }
 
 .add-book {
+    margin-top: 1rem;
     padding: 0.5rem 1rem;
-    border-radius: 10px;
-    border: 1px solid black;
+    border-radius: 25px;
+    border: 2px solid transparent;
+    color: var(--card-bg-color);
+    font-size: 1rem;
+    font-weight: 600;
+    background-color: var(--body-bg-color)
+}
+
+.add-book:hover {
+    background-color: var(--card-bg-color);
+    border: 2px solid var(--body-bg-color);
+    color: var(--body-bg-color);
+    transition: all 0.2s;
+}
+
+.add-book:hover:active {
+    transform: translateY(2px);
 }
 
 #book-form {
     position:absolute;
     visibility: hidden;
     padding: 0.5rem 1rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -60%);
     display:grid;
     background-color: var(--card-bg-color);
     box-shadow: 1px 1px 5px black;
     border-radius: 20px;
-    color:black;
     z-index: 50;
 }
 
