--- a/styles.css
+++ b/styles.css
@@ -140,12 +140,17 @@ header h1 {
     padding: 1rem;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -75%);
+    transform: translate(-50%, -75%) scale(0.5);
     display:grid;
     background-color: var(--card-bg-color);
     box-shadow: 1px 1px 5px black;
     border-radius: 5px;
     z-index: 50;
+}
+
+#book-form.form-toggle {
+    transform: translate(-50%, -75%) scale(1);
+    transition: transform 0.2s;
 }
 
 #book-form input {
